infra/myhc-dev/k8s-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myhc-patient-portal-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: "Prefix"
            backend:
              service:
                name: myhc-patient-portal-service
                port:
                  number: 80
